force-app/main/default/objects/Account/fields/SW_ID_Issuing_Authority__c.field-meta.xml
<CustomField>
    <fullName>SW_ID_Issuing_Authority__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ID Issuing Authority</label>
    <length>100</length>
    <type>Text</type>
</CustomField>