force-app/main/default/objects/Account/fields/SW_ID_State__c.field-meta.xml
<CustomField>
    <fullName>SW_ID_State__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ID State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>