force-app/main/default/objects/Account/fields/SW_Military_Dependent__c.field-meta.xml
<CustomField>
    <fullName>SW_Military_Dependent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dependent of Active Duty Military</label>
    <type>Checkbox</type>
</CustomField>