force-app/main/default/objects/Account/fields/SW_Proposed_Commercial_Loan_Role__c.field-meta.xml
<CustomField>
    <fullName>SW_Proposed_Commercial_Loan_Role__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SW Proposed Commercial Loan Role</label>
    <type>Checkbox</type>
</CustomField>