force-app/main/default/objects/Account/fields/SW_State_of_Formation__c.field-meta.xml
<CustomField>
    <fullName>SW_State_of_Formation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>State of Formation</label>
    <length>2</length>
    <type>Text</type>
</CustomField>