force-app/main/default/objects/Account/fields/SW_Under_Formation__c.field-meta.xml
<CustomField>
    <fullName>SW_Under_Formation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Under Formation</label>
    <type>Checkbox</type>
</CustomField>