force-app/main/default/objects/Account/fields/SW_Year_Founded__c.field-meta.xml
<CustomField>
    <fullName>SW_Year_Founded__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Year Founded</label>
    <length>4</length>
    <type>Text</type>
</CustomField>