force-app/main/default/objects/Account/fields/Tax_ID_Type__c.field-meta.xml
<CustomField>
    <fullName>Tax_ID_Type__c</fullName>
    <label>Tax ID Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SSN</fullName>
            </value>
            <value>
                <fullName>ITIN</fullName>
            </value>
            <value>
                <fullName>Foreign Tax ID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>