force-app/main/default/objects/Account/fields/Total_Commercial_Principal_Balance__c.field-meta.xml
<CustomField>
    <fullName>Total_Commercial_Principal_Balance__c</fullName>
    <label>Total Commercial Principal Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>