force-app/main/default/objects/Account/fields/Total_Number_of_Checking_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Checking_Accounts__c</fullName>
    <label>Total Number of Checking Accounts</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>