force-app/main/default/objects/Account/fields/Total_Principal_Balance__c.field-meta.xml
<CustomField>
    <fullName>Total_Principal_Balance__c</fullName>
    <label>Total Principal Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>