force-app/main/default/objects/Account/fields/TtlNbrCashMgmtFinAccts__c.field-meta.xml
<CustomField>
    <fullName>TtlNbrCashMgmtFinAccts__c</fullName>
    <description>Rollup field indicating the total number of FAs for which this Account is the Primary Owner that have Cash Management services active.</description>
    <label>TtlNbrCashMgmtFinAccts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>