force-app/main/default/objects/Account/fields/TtlNbrRelBankingFinAccts__c.field-meta.xml
<CustomField>
    <fullName>TtlNbrRelBankingFinAccts__c</fullName>
    <description>Rollup field indicating the total number of FAs for which this Account is the Primary Owner that are assigned to the Relationship Banking branch.</description>
    <label>TtlNbrRelBankingFinAccts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>