force-app/main/default/objects/Account/fields/Weighted_Average_Loan_Rate__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Average_Loan_Rate__c</fullName>
    <label>Weighted Average Loan Rate</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>