force-app/main/default/objects/Account/fields/YTD_Average_Deposits__c.field-meta.xml
<CustomField>
    <fullName>YTD_Average_Deposits__c</fullName>
    <label>YTD Average Deposits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>