force-app/main/default/objects/Account/validationRules/Account_Number_Format_Org.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Number_Format_Org</fullName>
    <active>true</active>
    <description>Requires that the Account Number for a Institution Account matches the formatting for the COCC Organization Number (O:00000).</description>
    <errorConditionFormula>AND(
IsPersonAccount = false,
NOT(RecordType.Name = &quot;Household&quot;),
ISCHANGED(AccountNumber),
OR(
NOT(LEFT(AccountNumber ,2) = &quot;O:&quot;),
LEFT(AccountNumber ,3) = &quot;O: &quot;),
$Profile.Name = &quot;End User&quot;)</errorConditionFormula>
    <errorDisplayField>AccountNumber</errorDisplayField>
    <errorMessage>Account Number must equal the COCC Organization Number for this customer. The COCC Organization Number entered in the Account Number field must be formatted as follows: &quot;O:00000&quot;</errorMessage>
</ValidationRule>