force-app/main/default/objects/Account/validationRules/SSN_Format_Business_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>SSN_Format_Business_Account</fullName>
    <active>true</active>
    <errorConditionFormula>IsPersonAccount = false
&amp;&amp;
NOT(REGEX( SSN_Tax_Id__c ,&quot;[0-9]{2}-[0-9]{7}&quot;))
&amp;&amp;
NOT(ISBLANK(SSN_Tax_Id__c ))</errorConditionFormula>
    <errorDisplayField>SSN_Tax_Id__c</errorDisplayField>
    <errorMessage>Please enter the Tax Id in XX-XXXXXXX format</errorMessage>
</ValidationRule>