force-app/main/default/objects/Account/validationRules/SSN_Format_Person_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>SSN_Format_Person_Account</fullName>
    <active>true</active>
    <errorConditionFormula>IsPersonAccount = True
&amp;&amp;
NOT(REGEX( SSN_Tax_Id__c ,&quot;[0-9]{3}-[0-9]{2}-[0-9]{4}&quot;))
&amp;&amp;
NOT(ISBLANK(SSN_Tax_Id__c ))</errorConditionFormula>
    <errorDisplayField>SSN_Tax_Id__c</errorDisplayField>
    <errorMessage>Please enter the SSN in XXX-XX-XXXX</errorMessage>
</ValidationRule>