force-app/main/default/objects/Account/listViews/MyAccounts.listView-meta.xml
<ListView>
    <fullName>MyAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>FinServ__AUM__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>FinServ__BranchName__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>PC_EMAIL</columns>
    <columns>PC_BIRTHDATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Accounts</label>
</ListView>